GasStationProject/force-app/main/default/objects/Gas_Station__c/Gas_Station__c.object-meta.xml
<CustomObject>
    <label>Gas Station</label>
    <nameField>
        <displayFormat>Gas-{000}</displayFormat>
        <label>Gas Station</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gas Stations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>