GasStationProject/force-app/main/default/objects/Gas_Station__c/fields/Fuel_Available_in_bunk__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Available_in_bunk__c</fullName>
    <formula>Fuel_supplied_to_bunk__c  -  Fuel_used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fuel Available in bunk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>