GasStationProject/force-app/main/default/objects/Gas_Station__c/fields/Fuel_supplied_to_bunk__c.field-meta.xml
<CustomField>
    <fullName>Fuel_supplied_to_bunk__c</fullName>
    <label>Fuel supplied to bunk</label>
    <summarizedField>Fuel_details__c.Fuel_Supplied__c</summarizedField>
    <summaryForeignKey>Fuel_details__c.Gas_Station__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>