GasStationProject/force-app/main/default/objects/Gas_Station__c/fields/Fuel_used__c.field-meta.xml
<CustomField>
    <fullName>Fuel_used__c</fullName>
    <label>Fuel used</label>
    <summarizedField>Buyer__c.Fuel_filled_in_vehicle__c</summarizedField>
    <summaryForeignKey>Buyer__c.Gas_Station_name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>